ECCMAUT407-Adicionado-delay-para-chamadas-consecutivas